<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="di.andaluciacompromisodigital.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/andal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView" />
        <TextView
            android:id="@+id/nom"
            android:layout_below="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo1_nombre"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="60dp"/>
        <TextView
            android:id="@+id/apell"
            android:layout_below="@+id/nom"
            android:layout_alignRight="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo2_apellidos"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/correoE"
            android:layout_below="@+id/apell"
            android:layout_alignRight="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo3_correoE"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/nif"
            android:layout_below="@+id/correoE"
            android:layout_alignRight="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo4_nif"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/discap"
            android:layout_below="@+id/nif"
            android:layout_alignRight="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo5_discapacidad"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/tlfn"
            android:layout_below="@+id/discap"
            android:layout_alignRight="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo6_tlfn"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:id="@+id/fecha"
            android:layout_below="@+id/tlfn"
            android:layout_alignRight="@+id/nom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campo7_fecha"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/nom"
        android:layout_toRightOf="@+id/nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/apell"
        android:layout_toRightOf="@+id/nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/correoE"
        android:layout_toRightOf="@+id/nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/nif"
        android:layout_toRightOf="@+id/nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/discap"
        android:layout_toRightOf="@+id/nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/tlfn"
        android:layout_toRightOf="@+id/nom"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/fecha"
        android:layout_toRightOf="@+id/nom"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enviar"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/fecha"/>
</RelativeLayout>
